--- a/pom.xml
+++ b/pom.xml
@@ -70,9 +70,37 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    
+    <pluginRepositories>        
+        <pluginRepository>
+            <id>maven.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>https://maven.java.net/content/groups/promoted/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>maven2-repository.dev.java.net</id>
+            <name>Java.net Repository for Maven</name>
+            <url>http://download.java.net/maven/glassfish/</url>
+        </pluginRepository>
+        <pluginRepository>
+            <id>m.g.o-groups-glassfish</id>
+            <url>http://maven.glassfish.org/content/groups/glassfish</url>
+        </pluginRepository>
+    </pluginRepositories>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.glassfish</groupId>
+                <artifactId>maven-embedded-glassfish-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <app>${project.build.directory}/${project.build.finalName}.war</app>
+                    <autoDelete>true</autoDelete>
+                    <port>8080</port>
+                    <contextRoot>test</contextRoot>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
