--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -1,4 +1,3 @@
-label.username= Username
-label.password= Password
-label.login= Login
-error.login= Invalid Username/Password. Please try again.
+global.title = ByteNoodles's Film database sample application
+global.language.spanish = Spanish
+global.language.english = English
